Fix SIGSEGV in ExoTreeView after view mode change while in click handler.
If click on folder in view leads to view mode change which leads to the
ExoTreeView destroying it is invalid to still use selection data taken
before the click processing.

--- a/AUTHORS
+++ b/AUTHORS
@@ -27,5 +27,6 @@ Richard Grenville <richardgv@users.sourceforge.net>
 Mamoru TASAKA <mtasaka@fedoraproject.org>
 Jekyll Wu <adaptee@gmail.com>
 David Schalig <github@schalig.org>
+Jonathan Marsden <jmarsden@fastmail.fm>
 
 Also big thanks to our great translation team.
