--- a/po/hr.po
+++ b/po/hr.po
@@ -8,16 +8,16 @@ msgstr ""
 "Project-Id-Version: libfm 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-11-13 22:15+0100\n"
-"PO-Revision-Date: 2013-11-02 09:45+0000\n"
+"PO-Revision-Date: 2013-11-24 17:53+0000\n"
 "Last-Translator: Ivica <ikoli@yahoo.com>\n"
 "Language: hr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1383385550.0\n"
+"X-POOTLE-MTIME: 1385315602.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -32,12 +32,10 @@ msgid "Create new or change existing desktop entry"
 msgstr "Napravite novi ili promjenite postojeći unos radne površine"
 
 #: ../data/ui/app-chooser.glade.h:1
-#, fuzzy
 msgid "Choose Application"
 msgstr "Odaberite program"
 
 #: ../data/ui/app-chooser.glade.h:2
-#, fuzzy
 msgid "<b>File type to be opened:</b>"
 msgstr "<b>Tip datoteke koji će biti otvoren:</b>"
 
@@ -338,7 +336,6 @@ msgid "GB"
 msgstr "GB"
 
 #: ../data/ui/filesearch.glade.h:5
-#, fuzzy
 msgid "Choose Date"
 msgstr "Odaberite datum"
 
@@ -368,7 +365,7 @@ msgstr ""
 
 #: ../data/ui/filesearch.glade.h:12
 msgid "<b>Plac_es to Search:</b>"
-msgstr "<b>Mje_sta za pretraživanje:</b>"
+msgstr ""
 
 #: ../data/ui/filesearch.glade.h:13
 msgid "_Search in sub directories"
@@ -464,12 +461,10 @@ msgid "The preferred Web Browser will be used to open hyperlinks."
 msgstr "Biti će korišten željeni Web preglednik za otvaranje hiperpoveznica."
 
 #: ../data/ui/preferred-apps.glade.h:4
-#, fuzzy
 msgid "<b>Mail Client</b>"
 msgstr "<b>Klijent pošte</b>"
 
 #: ../data/ui/preferred-apps.glade.h:5
-#, fuzzy
 msgid ""
 "The preferred Mail Client will be used to compose emails when you click on e-"
 "mail addresses."
@@ -548,7 +543,7 @@ msgstr "NIje postavljen zadani program za MIME tip %s"
 #: ../src/base/fm-path.c:177 ../src/gtk/fm-places-model.c:829
 #: ../src/gtk/fm-places-model.c:997
 msgid "Devices"
-msgstr ""
+msgstr "Uređaji"
 
 #: ../src/base/fm-path.c:183 ../src/gtk/fm-places-model.c:847
 #: ../src/gtk/fm-places-model.c:1012
@@ -725,14 +720,12 @@ msgid "_Cancel"
 msgstr "_Otkaži"
 
 #: ../src/gtk/fm-dnd-dest.c:412
-#, fuzzy
 msgid "C_opy Here"
-msgstr "K_opiraj"
+msgstr "K_opiraj ovdje"
 
 #: ../src/gtk/fm-dnd-dest.c:413
-#, fuzzy
 msgid "_Move Here"
-msgstr "_Pomakni lijevo"
+msgstr "_Pomakni ovdje"
 
 #. Note to translators: Link in not noun but verb here
 #: ../src/gtk/fm-dnd-dest.c:415
@@ -782,9 +775,8 @@ msgstr "Svoj_stva"
 
 #. Note to translators: Trash in not noun but verb here
 #: ../src/gtk/fm-file-menu.c:261 ../src/gtk/fm-file-menu.c:521
-#, fuzzy
 msgid "Move to _Trash"
-msgstr "Pomakni _desno"
+msgstr "Pomakni u _smeće"
 
 #: ../src/gtk/fm-file-properties.c:364
 msgid "Image files"
@@ -981,10 +973,9 @@ msgstr "Ova datoteka '%s' je izvršna. Želite li je izvršiti?"
 #. show error if no paths are added
 #: ../src/gtk/fm-gtk-file-launcher.c:652
 msgid "No folders are specified."
-msgstr ""
+msgstr "Mape nisu određene."
 
 #: ../src/gtk/fm-gtk-file-launcher.c:691 ../src/gtk/fm-gtk-utils.c:554
-#, fuzzy
 msgid "Select Folder"
 msgstr "Odaberite mapu"
 
@@ -1043,19 +1034,16 @@ msgid "Are you sure you want to empty the trash can?"
 msgstr "Jeste li sigurni da želite isprazniti smeće?"
 
 #: ../src/gtk/fm-path-entry.c:631
-#, fuzzy
 msgid "Pa_ste and Go"
 msgstr "Za_lijepi i idi"
 
 #: ../src/gtk/fm-path-entry.c:690
-#, fuzzy
 msgid "Folder location bar"
-msgstr "Pridruživanje datoteke"
+msgstr "Lokacijska traka mape"
 
 #: ../src/gtk/fm-places-model.c:762 ../src/gtk/fm-places-model.c:976
-#, fuzzy
 msgid "Home Folder"
-msgstr "_Preimenuj mapu"
+msgstr "Osobna mapa"
 
 #: ../src/gtk/fm-places-model.c:778 ../src/gtk/fm-places-model.c:984
 msgid "Desktop"
@@ -1067,9 +1055,8 @@ msgid "Applications"
 msgstr "Programi"
 
 #: ../src/gtk/fm-places-model.c:812 ../src/gtk/fm-places-model.c:990
-#, fuzzy
 msgid "Filesystem Root"
-msgstr "Datotečni sustav"
+msgstr ""
 
 #: ../src/gtk/fm-places-view.c:124
 msgid "_Mount Volume"
@@ -1109,7 +1096,7 @@ msgstr "_Isprazni smeće"
 
 #: ../src/gtk/fm-places-view.c:526
 msgid "Shows list of common places, devices, and bookmarks in sidebar"
-msgstr ""
+msgstr "Pokaži listu mjesta, uređaja i zabilješki u bočnom stupcu"
 
 #: ../src/gtk/fm-places-view.c:1091
 msgid "Rename Bookmark Item"
@@ -1197,17 +1184,14 @@ msgid "Trashing Files"
 msgstr "Bacanje datoteka u smeće"
 
 #: ../src/gtk/fm-progress-dlg.c:569
-#, fuzzy
 msgid "Deleting Files"
 msgstr "Brisanje datoteka"
 
 #: ../src/gtk/fm-progress-dlg.c:572
-#, fuzzy
 msgid "Creating Symlinks"
 msgstr "Stvaranje simboličkih poveznica"
 
 #: ../src/gtk/fm-progress-dlg.c:575
-#, fuzzy
 msgid "Changing File Attributes"
 msgstr "Promjena atributa datoteke"
 
@@ -1245,12 +1229,10 @@ msgid "_Hide %s"
 msgstr "_Sakrij %s"
 
 #: ../src/gtk/fm-standard-view.c:821
-#, fuzzy
 msgid "_Move Left"
 msgstr "_Pomakni lijevo"
 
 #: ../src/gtk/fm-standard-view.c:827
-#, fuzzy
 msgid "Move _Right"
 msgstr "Pomakni _desno"
 
@@ -1265,19 +1247,19 @@ msgstr ""
 
 #: ../src/gtk/fm-standard-view.c:1803
 msgid "_Icon View"
-msgstr ""
+msgstr "_Prikaz ikona"
 
 #: ../src/gtk/fm-standard-view.c:1804
 msgid "_Compact View"
-msgstr ""
+msgstr "_Zbijeni pregled"
 
 #: ../src/gtk/fm-standard-view.c:1805
 msgid "_Thumbnail View"
-msgstr ""
+msgstr "_Pogled sa sličicama"
 
 #: ../src/gtk/fm-standard-view.c:1806
 msgid "Detailed _List View"
-msgstr ""
+msgstr "Pogled _detaljne liste"
 
 #: ../src/gtk/fm-tab-label.c:159
 msgid "Changes active tab"
@@ -1417,11 +1399,11 @@ msgstr ""
 #: ../src/modules/vfs-menu.c:2338 ../src/modules/vfs-menu.c:2427
 #, c-format
 msgid "Cannot create menu item '%s'"
-msgstr ""
+msgstr "Ne mogu napraviti stavku izbornika '%s'"
 
 #: ../src/modules/vfs-menu.c:2572
 msgid "Name of menu directory should not end with \".desktop\""
-msgstr ""
+msgstr "Ime direktorija izbornika ne bi trebalo završavati sa \".desktop\""
 
 #: ../src/modules/vfs-menu.c:2617
 msgid "Invalid operation with menu root"
@@ -1442,12 +1424,10 @@ msgid "Search"
 msgstr "Traži"
 
 #: ../src/modules/vfs-search.c:1049
-#, fuzzy
 msgid "Search Results"
 msgstr "Rezultati pretraživanja"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:66
-#, fuzzy
 msgid "Choose Executable File"
 msgstr "Odaberite izvršnu datoteku"
 
@@ -1494,7 +1474,6 @@ msgid "_Use startup notification"
 msgstr ""
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:388
-#, fuzzy
 msgid "_Desktop Entry"
 msgstr "_Unos radne površine"
 
