--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: LibFM 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-11-13 22:15+0100\n"
-"PO-Revision-Date: 2013-10-06 05:07+0000\n"
+"PO-Revision-Date: 2013-11-27 15:05+0000\n"
 "Last-Translator: Wylmer <wantinghard@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: zh_CN\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1381036063.0\n"
+"X-POOTLE-MTIME: 1385564757.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -32,12 +32,10 @@ msgid "Create new or change existing desktop entry"
 msgstr "新建或修改现有的桌面项"
 
 #: ../data/ui/app-chooser.glade.h:1
-#, fuzzy
 msgid "Choose Application"
-msgstr "选择一个应用程序"
+msgstr "选择应用程序"
 
 #: ../data/ui/app-chooser.glade.h:2
-#, fuzzy
 msgid "<b>File type to be opened:</b>"
 msgstr "<b>要打开的文件类型：</b>"
 
@@ -94,7 +92,6 @@ msgid "_Set selected application as default action of this file type"
 msgstr "将选择的应用程序作为对这种文件类型的默认操作(_S)"
 
 #: ../data/ui/ask-rename.glade.h:1
-#, fuzzy
 msgid "Confirm File Replacing"
 msgstr "确认文件替换"
 
@@ -125,7 +122,6 @@ msgid "with the following file?"
 msgstr "针对以下文件？"
 
 #: ../data/ui/ask-rename.glade.h:9
-#, fuzzy
 msgid "_File name:"
 msgstr "文件名(_F)："
 
@@ -180,7 +176,6 @@ msgid "<b>Target file:</b>"
 msgstr "<b>目标文件：</b>"
 
 #: ../data/ui/file-prop.glade.h:6
-#, fuzzy
 msgid "<b>File type:</b>"
 msgstr "<b>文件类型：</b>"
 
@@ -193,27 +188,22 @@ msgid "Select the application used to open files of this type "
 msgstr "选择用于打开此类文件的应用程序 "
 
 #: ../data/ui/file-prop.glade.h:9
-#, fuzzy
 msgid "<b>Total size of files:</b>"
 msgstr "<b>文件总大小：</b>"
 
 #: ../data/ui/file-prop.glade.h:10
-#, fuzzy
 msgid "<b>Size on disk:</b>"
 msgstr "<b>磁盘上的大小：</b>"
 
 #: ../data/ui/file-prop.glade.h:11
-#, fuzzy
 msgid "<b>Last modification:</b>"
 msgstr "<b>上次修改：</b>"
 
 #: ../data/ui/file-prop.glade.h:12
-#, fuzzy
 msgid "<b>Last access:</b>"
 msgstr "<b>上次访问：</b>"
 
 #: ../data/ui/file-prop.glade.h:13
-#, fuzzy
 msgid "<b>Last permissions change:</b>"
 msgstr "<b>上次权限更改：</b>"
 
@@ -338,9 +328,8 @@ msgid "GB"
 msgstr "GB"
 
 #: ../data/ui/filesearch.glade.h:5
-#, fuzzy
 msgid "Choose Date"
-msgstr "选择一个日期"
+msgstr "选择日期"
 
 #: ../data/ui/filesearch.glade.h:6
 msgid "Choose a date from the following calendar"
@@ -464,12 +453,10 @@ msgid "The preferred Web Browser will be used to open hyperlinks."
 msgstr "用于打开超链接的优先网络浏览器。"
 
 #: ../data/ui/preferred-apps.glade.h:4
-#, fuzzy
 msgid "<b>Mail Client</b>"
 msgstr "<b>邮件客户端</b>"
 
 #: ../data/ui/preferred-apps.glade.h:5
-#, fuzzy
 msgid ""
 "The preferred Mail Client will be used to compose emails when you click on e-"
 "mail addresses."
@@ -546,7 +533,7 @@ msgstr "没有设置对应于 MIME 类型 %s 的默认应用程序"
 #: ../src/base/fm-path.c:177 ../src/gtk/fm-places-model.c:829
 #: ../src/gtk/fm-places-model.c:997
 msgid "Devices"
-msgstr ""
+msgstr "设备"
 
 #: ../src/base/fm-path.c:183 ../src/gtk/fm-places-model.c:847
 #: ../src/gtk/fm-places-model.c:1012
@@ -709,7 +696,6 @@ msgid "Installed Applications"
 msgstr "已安装的应用程序"
 
 #: ../src/gtk/fm-dir-tree-model.c:420 ../src/gtk/fm-dir-tree-model.c:1205
-#, fuzzy
 msgid "<No subfolders>"
 msgstr "<无子文件夹>"
 
@@ -726,20 +712,17 @@ msgid "_Cancel"
 msgstr "取消(_C)"
 
 #: ../src/gtk/fm-dnd-dest.c:412
-#, fuzzy
 msgid "C_opy Here"
-msgstr "复制(_O)"
+msgstr "复制到这里(_O)"
 
 #: ../src/gtk/fm-dnd-dest.c:413
-#, fuzzy
 msgid "_Move Here"
-msgstr "左移(_M)"
+msgstr "移到这里(_M)"
 
 #. Note to translators: Link in not noun but verb here
 #: ../src/gtk/fm-dnd-dest.c:415
-#, fuzzy
 msgid "_Link Here"
-msgstr "链接(_L)"
+msgstr "链接到这里(_L)"
 
 #: ../src/gtk/fm-dnd-dest.c:861
 msgid "XDirectSave failed."
@@ -783,9 +766,8 @@ msgstr "文件属性(_E)"
 
 #. Note to translators: Trash in not noun but verb here
 #: ../src/gtk/fm-file-menu.c:261 ../src/gtk/fm-file-menu.c:521
-#, fuzzy
 msgid "Move to _Trash"
-msgstr "右移(_R)"
+msgstr "移到回收站(_T)"
 
 #: ../src/gtk/fm-file-properties.c:364
 msgid "Image files"
@@ -837,7 +819,6 @@ msgid "<b>File:</b>"
 msgstr "<b>文件：</b>"
 
 #: ../src/gtk/fm-file-properties.c:1307
-#, fuzzy
 msgid "Multiple files"
 msgstr "多个文件"
 
@@ -904,12 +885,10 @@ msgstr "显示隐藏文件(_H)"
 
 #. Note to translators: "Mingle..." means "Do not put folders before files" but make the translation as short as possible, please!
 #: ../src/gtk/fm-folder-view.c:207
-#, fuzzy
 msgid "Mingle _Files and Folders"
 msgstr "同等对待文件和文件夹(_F)"
 
 #: ../src/gtk/fm-folder-view.c:208
-#, fuzzy
 msgid "_Ignore Name Case"
 msgstr "忽略名称大小写(_I)"
 
@@ -934,7 +913,6 @@ msgid "Enter a name for the newly created folder:"
 msgstr "输入新创建文件夹的名称："
 
 #: ../src/gtk/fm-folder-view.c:848
-#, fuzzy
 msgid "Creating New Folder"
 msgstr "创建新文件夹"
 
@@ -984,9 +962,8 @@ msgid "No folders are specified."
 msgstr "未指定文件夹。"
 
 #: ../src/gtk/fm-gtk-file-launcher.c:691 ../src/gtk/fm-gtk-utils.c:554
-#, fuzzy
 msgid "Select Folder"
-msgstr "请选择一个文件夹"
+msgstr "选择文件夹"
 
 #: ../src/gtk/fm-gtk-utils.c:70
 msgid "Error"
@@ -1039,19 +1016,16 @@ msgid "Are you sure you want to empty the trash can?"
 msgstr "您确定想清空回收站吗？"
 
 #: ../src/gtk/fm-path-entry.c:631
-#, fuzzy
 msgid "Pa_ste and Go"
 msgstr "粘贴并执行(_S)"
 
 #: ../src/gtk/fm-path-entry.c:690
-#, fuzzy
 msgid "Folder location bar"
-msgstr "文件关联"
+msgstr "文件夹位置栏"
 
 #: ../src/gtk/fm-places-model.c:762 ../src/gtk/fm-places-model.c:976
-#, fuzzy
 msgid "Home Folder"
-msgstr "重命名文件夹(_R)"
+msgstr "主文件夹"
 
 #: ../src/gtk/fm-places-model.c:778 ../src/gtk/fm-places-model.c:984
 msgid "Desktop"
@@ -1063,9 +1037,8 @@ msgid "Applications"
 msgstr "应用程序"
 
 #: ../src/gtk/fm-places-model.c:812 ../src/gtk/fm-places-model.c:990
-#, fuzzy
 msgid "Filesystem Root"
-msgstr "文件系统"
+msgstr "文件系统根目录"
 
 #: ../src/gtk/fm-places-view.c:124
 msgid "_Mount Volume"
@@ -1177,34 +1150,28 @@ msgid ", "
 msgstr "，"
 
 #: ../src/gtk/fm-progress-dlg.c:560
-#, fuzzy
 msgid "Moving Files"
 msgstr "移动文件"
 
 #: ../src/gtk/fm-progress-dlg.c:563
-#, fuzzy
 msgid "Copying Files"
-msgstr "复制文件"
+msgstr "正在复制文件"
 
 #: ../src/gtk/fm-progress-dlg.c:566
-#, fuzzy
 msgid "Trashing Files"
 msgstr "将文件移到回收站"
 
 #: ../src/gtk/fm-progress-dlg.c:569
-#, fuzzy
 msgid "Deleting Files"
-msgstr "正在删除文件"
+msgstr "删除文件"
 
 #: ../src/gtk/fm-progress-dlg.c:572
-#, fuzzy
 msgid "Creating Symlinks"
-msgstr "正在创建符号链接"
+msgstr "创建符号链接"
 
 #: ../src/gtk/fm-progress-dlg.c:575
-#, fuzzy
 msgid "Changing File Attributes"
-msgstr "正在修改文件属性"
+msgstr "修改文件属性"
 
 #: ../src/gtk/fm-side-pane.c:66
 msgid "_Off"
@@ -1240,12 +1207,10 @@ msgid "_Hide %s"
 msgstr "隐藏 %s (_H)"
 
 #: ../src/gtk/fm-standard-view.c:821
-#, fuzzy
 msgid "_Move Left"
 msgstr "左移(_M)"
 
 #: ../src/gtk/fm-standard-view.c:827
-#, fuzzy
 msgid "Move _Right"
 msgstr "右移(_R)"
 
@@ -1255,7 +1220,6 @@ msgid "Show %s"
 msgstr "显示 %s"
 
 #: ../src/gtk/fm-standard-view.c:862
-#, fuzzy
 msgid "_Forget Width"
 msgstr "忘记宽度(_F)"
 
@@ -1438,12 +1402,10 @@ msgid "Search"
 msgstr "搜索"
 
 #: ../src/modules/vfs-search.c:1049
-#, fuzzy
 msgid "Search Results"
 msgstr "搜索结果"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:66
-#, fuzzy
 msgid "Choose Executable File"
 msgstr "选择可执行文件"
 
@@ -1490,7 +1452,6 @@ msgid "_Use startup notification"
 msgstr "使用启动通知(_U)"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:388
-#, fuzzy
 msgid "_Desktop Entry"
 msgstr "桌面项(_D)"
 
