Correct comment string in the libfm-pref-apps.desktop file.

--- a/po/libfm.pot
+++ b/po/libfm.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-12-03 13:45+0200\n"
+"POT-Creation-Date: 2013-12-03 14:00+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -23,7 +23,7 @@ msgid "Preferred Applications"
 msgstr ""
 
 #: ../data/libfm-pref-apps.desktop.in.h:2
-msgid "Select applications called on click on Web page or e-mail address"
+msgid "Select applications called on click on Web link or e-mail address"
 msgstr ""
 
 #: ../data/lxshortcut.desktop.in.h:1
