--- a/po/uk.po
+++ b/po/uk.po
@@ -3,23 +3,22 @@
 # This file is distributed under the same license as the libfm package.
 # Yarema aka Knedlyk <yupadmin@gmail.com>, 2010-2013.
 # Andriy aka LStranger <andrej@rep.kiev.ua>, 2012-2013.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: libfm 1.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-12-03 14:00+0200\n"
-"PO-Revision-Date: 2013-12-03 14:05+0200\n"
-"Last-Translator: LStranger <andrej@rep.kiev.ua>\n"
+"POT-Creation-Date: 2013-12-05 01:18+0200\n"
+"PO-Revision-Date: 2013-12-04 23:25+0000\n"
+"Last-Translator: Andriy <andrej@rep.kiev.ua>\n"
 "Language-Team: Ukrainian <translation@linux.org.ua>\n"
 "Language: uk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1374618717.0\n"
+"X-POOTLE-MTIME: 1386199555.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -111,7 +110,7 @@ msgstr "Підтвердити заміщення файлів"
 msgid "_Skip"
 msgstr "Пр_опустити"
 
-#: ../data/ui/ask-rename.glade.h:3 ../src/gtk/fm-file-menu.c:162
+#: ../data/ui/ask-rename.glade.h:3
 msgid "_Rename"
 msgstr "Пере_йменувати"
 
@@ -750,9 +749,13 @@ msgstr "XDirectSave не вдалося."
 msgid "_Open"
 msgstr "Ві_дкрити"
 
-#: ../src/gtk/fm-file-menu.c:152 ../src/gtk/fm-file-menu.c:153
+#: ../src/gtk/fm-file-menu.c:152
 msgid "Open _With..."
 msgstr "В_ідкрити з..."
+
+#: ../src/gtk/fm-file-menu.c:153
+msgid "Open _With"
+msgstr "В_ідкрити з"
 
 #: ../src/gtk/fm-file-menu.c:158
 msgid "Copy Pa_th(s)"
@@ -769,6 +772,10 @@ msgstr "В_ідновити"
 #: ../src/gtk/fm-file-menu.c:161
 msgid "_Add to Bookmarks"
 msgstr "Додати до _закладок"
+
+#: ../src/gtk/fm-file-menu.c:162
+msgid "_Rename..."
+msgstr "Пере_йменувати..."
 
 #: ../src/gtk/fm-file-menu.c:163
 msgid "Co_mpress..."
@@ -902,8 +909,8 @@ msgid "_Sort Files"
 msgstr "_Сортувати файли"
 
 #: ../src/gtk/fm-folder-view.c:196
-msgid "_Rename Folder"
-msgstr "_Перейменувати теку"
+msgid "_Rename Folder..."
+msgstr "_Перейменувати теку..."
 
 #: ../src/gtk/fm-folder-view.c:197
 msgid "Folder Prop_erties"
@@ -1112,8 +1119,7 @@ msgstr "_Очистити смітник"
 
 #: ../src/gtk/fm-places-view.c:526
 msgid "Shows list of common places, devices, and bookmarks in sidebar"
-msgstr ""
-"Показує перелік загальних місць, пристроїв та закладок у боковій панелі"
+msgstr "Показує перелік загальних місць, пристроїв та закладок у боковій панелі"
 
 #: ../src/gtk/fm-places-view.c:1091
 msgid "Rename Bookmark Item"
@@ -1675,6 +1681,9 @@ msgstr "Чистий оптичний диск"
 #: ../src/udisks/g-udisks-device.c:301
 msgid "Optical Disc"
 msgstr "Оптичний диск"
+
+#~ msgid "_Rename Folder"
+#~ msgstr "_Перейменувати теку"
 
 #~ msgid "<b>File type to be opened:</b>"
 #~ msgstr "<b>Тип файлу для відкриття:</b>"
