--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Changes on 1.1.4 since 1.1.3:
+
+* Backported fix for crash after window close from 1.2.0.
+
+
 Changes on 1.1.3 since 1.1.2.2:
 
 * Fixed column collapse issue when double-clicking separator.
