--- a/NEWS
+++ b/NEWS
@@ -369,6 +369,13 @@ Changes on 1.2.0 since 1.1.0:
 * New API fm_side_pane_set_home_dir() for change the directory path which
     will be used on activating 'Home' item in side pane.
 
+* New API fm_folder_view_scroll_to_path() to scroll folder view to some
+    path and optionally select it.
+
+* If files that file properties dialog is open for contain a directory
+    then file properties dialog will show file counting progress with
+    total number of files involved.
+
 * A whole lot of bugfixes.
 
 
