--- a/NEWS
+++ b/NEWS
@@ -376,6 +376,8 @@ Changes on 1.2.0 since 1.1.0:
     then file properties dialog will show file counting progress with
     total number of files involved.
 
+* Implemented support for hidden files in FmDirTreeModel.
+
 * A whole lot of bugfixes.
 
 
