--- a/NEWS
+++ b/NEWS
@@ -378,6 +378,10 @@ Changes on 1.2.0 since 1.1.0:
 
 * Implemented support for hidden files in FmDirTreeModel.
 
+* Added new built-in column in FmFolderModel - Extension (last suffix of
+    the displayable name) as alternative to file type for some old-style
+    users.
+
 * A whole lot of bugfixes.
 
 
